@@ -2939,24 +2939,6 @@ name|DFS_SUPPORT_APPEND_DEFAULT
 init|=
 literal|true
 decl_stmt|;
-DECL|field|DFS_HTTPS_ENABLE_KEY
-specifier|public
-specifier|static
-specifier|final
-name|String
-name|DFS_HTTPS_ENABLE_KEY
-init|=
-literal|"dfs.https.enable"
-decl_stmt|;
-DECL|field|DFS_HTTPS_ENABLE_DEFAULT
-specifier|public
-specifier|static
-specifier|final
-name|boolean
-name|DFS_HTTPS_ENABLE_DEFAULT
-init|=
-literal|false
-decl_stmt|;
 DECL|field|DFS_HTTP_POLICY_KEY
 specifier|public
 specifier|static
