@@ -7186,7 +7186,7 @@ operator|.
 name|DFS_WEB_AUTHENTICATION_KERBEROS_KEYTAB_KEY
 return|;
 block|}
-comment|/**    * Get http policy. Http Policy is chosen as follows:    *<ol>    *<li>If hadoop.ssl.enabled is set, http endpoints are not started. Only    * https endpoints are started on configured https ports</li>    *<li>This configuration is overridden by dfs.https.enable configuration, if    * it is set to true. In that case, both http and https endpoints are stared.</li>    *<li>All the above configurations are overridden by dfs.http.policy    * configuration. With this configuration you can set http-only, https-only    * and http-and-https endpoints.</li>    *</ol>    * See hdfs-default.xml documentation for more details on each of the above    * configuration settings.    */
+comment|/**    * Get http policy.    */
 DECL|method|getHttpPolicy (Configuration conf)
 specifier|public
 specifier|static
@@ -7209,113 +7209,12 @@ argument_list|(
 name|DFSConfigKeys
 operator|.
 name|DFS_HTTP_POLICY_KEY
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|policyStr
-operator|==
-literal|null
-condition|)
-block|{
-name|boolean
-name|https
-init|=
-name|conf
-operator|.
-name|getBoolean
-argument_list|(
-name|DFSConfigKeys
-operator|.
-name|DFS_HTTPS_ENABLE_KEY
 argument_list|,
 name|DFSConfigKeys
 operator|.
-name|DFS_HTTPS_ENABLE_DEFAULT
+name|DFS_HTTP_POLICY_DEFAULT
 argument_list|)
 decl_stmt|;
-name|boolean
-name|hadoopSsl
-init|=
-name|conf
-operator|.
-name|getBoolean
-argument_list|(
-name|CommonConfigurationKeys
-operator|.
-name|HADOOP_SSL_ENABLED_KEY
-argument_list|,
-name|CommonConfigurationKeys
-operator|.
-name|HADOOP_SSL_ENABLED_DEFAULT
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|hadoopSsl
-condition|)
-block|{
-name|LOG
-operator|.
-name|warn
-argument_list|(
-name|CommonConfigurationKeys
-operator|.
-name|HADOOP_SSL_ENABLED_KEY
-operator|+
-literal|" is deprecated. Please use "
-operator|+
-name|DFSConfigKeys
-operator|.
-name|DFS_HTTP_POLICY_KEY
-operator|+
-literal|"."
-argument_list|)
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|https
-condition|)
-block|{
-name|LOG
-operator|.
-name|warn
-argument_list|(
-name|DFSConfigKeys
-operator|.
-name|DFS_HTTPS_ENABLE_KEY
-operator|+
-literal|" is deprecated. Please use "
-operator|+
-name|DFSConfigKeys
-operator|.
-name|DFS_HTTP_POLICY_KEY
-operator|+
-literal|"."
-argument_list|)
-expr_stmt|;
-block|}
-return|return
-operator|(
-name|hadoopSsl
-operator|||
-name|https
-operator|)
-condition|?
-name|HttpConfig
-operator|.
-name|Policy
-operator|.
-name|HTTP_AND_HTTPS
-else|:
-name|HttpConfig
-operator|.
-name|Policy
-operator|.
-name|HTTP_ONLY
-return|;
-block|}
 name|HttpConfig
 operator|.
 name|Policy
