@@ -17,42 +17,6 @@ package|;
 end_package
 
 begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|http
-operator|.
-name|HttpConfig
-operator|.
-name|Policy
-operator|.
-name|HTTP_AND_HTTPS
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|http
-operator|.
-name|HttpConfig
-operator|.
-name|Policy
-operator|.
-name|HTTP_ONLY
-import|;
-end_import
-
-begin_import
 import|import
 name|org
 operator|.
@@ -75,16 +39,6 @@ operator|.
 name|conf
 operator|.
 name|Configuration
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|junit
-operator|.
-name|Assert
 import|;
 end_import
 
@@ -143,143 +97,6 @@ operator|.
 name|getHttpPolicy
 argument_list|(
 name|conf
-argument_list|)
-expr_stmt|;
-block|}
-annotation|@
-name|Test
-DECL|method|testDeprecatedConfiguration ()
-specifier|public
-name|void
-name|testDeprecatedConfiguration
-parameter_list|()
-block|{
-name|Configuration
-name|conf
-init|=
-operator|new
-name|Configuration
-argument_list|(
-literal|false
-argument_list|)
-decl_stmt|;
-name|Assert
-operator|.
-name|assertSame
-argument_list|(
-name|HTTP_ONLY
-argument_list|,
-name|DFSUtil
-operator|.
-name|getHttpPolicy
-argument_list|(
-name|conf
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|conf
-operator|.
-name|setBoolean
-argument_list|(
-name|DFSConfigKeys
-operator|.
-name|DFS_HTTPS_ENABLE_KEY
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-name|Assert
-operator|.
-name|assertSame
-argument_list|(
-name|HTTP_AND_HTTPS
-argument_list|,
-name|DFSUtil
-operator|.
-name|getHttpPolicy
-argument_list|(
-name|conf
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|conf
-operator|=
-operator|new
-name|Configuration
-argument_list|(
-literal|false
-argument_list|)
-expr_stmt|;
-name|conf
-operator|.
-name|setBoolean
-argument_list|(
-name|DFSConfigKeys
-operator|.
-name|HADOOP_SSL_ENABLED_KEY
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-name|Assert
-operator|.
-name|assertSame
-argument_list|(
-name|HTTP_AND_HTTPS
-argument_list|,
-name|DFSUtil
-operator|.
-name|getHttpPolicy
-argument_list|(
-name|conf
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|conf
-operator|=
-operator|new
-name|Configuration
-argument_list|(
-literal|false
-argument_list|)
-expr_stmt|;
-name|conf
-operator|.
-name|set
-argument_list|(
-name|DFSConfigKeys
-operator|.
-name|DFS_HTTP_POLICY_KEY
-argument_list|,
-name|HTTP_ONLY
-operator|.
-name|name
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|conf
-operator|.
-name|setBoolean
-argument_list|(
-name|DFSConfigKeys
-operator|.
-name|DFS_HTTPS_ENABLE_KEY
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-name|Assert
-operator|.
-name|assertSame
-argument_list|(
-name|HTTP_ONLY
-argument_list|,
-name|DFSUtil
-operator|.
-name|getHttpPolicy
-argument_list|(
-name|conf
-argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
